cartopy/docs/v0.19/_sources/gallery/scalar_data/eyja_volcano.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/scalar_data/eyja_volcano.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_scalar_data_eyja_volcano.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_scalar_data_eyja_volcano.py:


Map tile acquisition
--------------------

Demonstrates cartopy's ability to draw map tiles which are downloaded on
demand from the Stamen tile server. Internally these tiles are then combined
into a single image and displayed in the cartopy GeoAxes.

.. GENERATED FROM PYTHON SOURCE LINES 10-53



.. image:: /gallery/scalar_data/images/sphx_glr_eyja_volcano_001.png
    :alt: eyja volcano
    :class: sphx-glr-single-img





.. code-block:: default

    import matplotlib.pyplot as plt
    from matplotlib.transforms import offset_copy

    import cartopy.crs as ccrs
    import cartopy.io.img_tiles as cimgt


    def main():
        # Create a Stamen terrain background instance.
        stamen_terrain = cimgt.Stamen('terrain-background')

        fig = plt.figure()

        # Create a GeoAxes in the tile's projection.
        ax = fig.add_subplot(1, 1, 1, projection=stamen_terrain.crs)

        # Limit the extent of the map to a small longitude/latitude range.
        ax.set_extent([-22, -15, 63, 65], crs=ccrs.Geodetic())

        # Add the Stamen data at zoom level 8.
        ax.add_image(stamen_terrain, 8)

        # Add a marker for the Eyjafjallajökull volcano.
        ax.plot(-19.613333, 63.62, marker='o', color='red', markersize=12,
                alpha=0.7, transform=ccrs.Geodetic())

        # Use the cartopy interface to create a matplotlib transform object
        # for the Geodetic coordinate system. We will use this along with
        # matplotlib's offset_copy function to define a coordinate system which
        # translates the text by 25 pixels to the left.
        geodetic_transform = ccrs.Geodetic()._as_mpl_transform(ax)
        text_transform = offset_copy(geodetic_transform, units='dots', x=-25)

        # Add text 25 pixels to the left of the volcano.
        ax.text(-19.613333, 63.62, 'Eyjafjallajökull',
                verticalalignment='center', horizontalalignment='right',
                transform=text_transform,
                bbox=dict(facecolor='sandybrown', alpha=0.5, boxstyle='round'))
        plt.show()


    if __name__ == '__main__':
        main()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.337 seconds)


.. _sphx_glr_download_gallery_scalar_data_eyja_volcano.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: eyja_volcano.py <eyja_volcano.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: eyja_volcano.ipynb <eyja_volcano.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
